<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/miSettings"
        android:icon="@mipmap/settings_i"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="never" />

    <item
        android:id="@+id/miHelp"
        android:icon="@mipmap/help"
        android:orderInCategory="101"
        android:title="@string/action_help"
        android:showAsAction="never" />

    <item
        android:id="@+id/smiUpdateUser"
        android:icon="@mipmap/pencil_edit"
        android:orderInCategory="102"
        android:title="@string/action_updateUser"
        android:showAsAction="never" />

    <item
        android:id="@+id/smiLogout"
        android:icon="@mipmap/logout_icon"
        android:orderInCategory="103"
        android:title="@string/action_logout"
        android:showAsAction="never" />
</menu>
