<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_join_us"
        android:id="@+id/tvTitulo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textStyle="bold|italic"/>

    <AutoCompleteTextView
        android:id="@+id/actvFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtFirstName"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/tvTitulo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

    <AutoCompleteTextView
        android:id="@+id/actvLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLastName"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/actvFirstName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp" />

    <AutoCompleteTextView
        android:id="@+id/actvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/actvLastName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/actvAddress"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtUniqueUserName"
        android:layout_below="@+id/etEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/etPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        android:ems="10"
        android:layout_below="@+id/etUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:maxLength="4" />

    <EditText
        android:id="@+id/etConfirmPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtConfirmPin"
        android:inputType="numberPassword"
        android:ems="10"
        android:layout_below="@+id/etPin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:maxLength="4" />

    <Button
        android:id="@+id/btnJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_join"
        android:layout_below="@+id/etConfirmPin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_back"
        android:layout_below="@+id/btnJoin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>