<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo_hcs_3d"/>

    <AutoCompleteTextView
        android:id="@+id/actvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/ivLogo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        android:ems="10"
        android:layout_below="@+id/actvUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:maxLength="4" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:layout_below="@+id/etPin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/tvJoinUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/action_l_join_us"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etPin"
        android:layout_alignEnd="@+id/etPin"
        android:textStyle="bold|italic"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>